# homepage

./: bibliography.bib  contact.html  cv.md  deploy.sh  homepage.cabal  index.html  publications.html  publications.tex  software.html  stack.yaml
css/: ma.css
events/: CLA16.md  CRECOGI-kickoff.md  DICE18.md  ICFP15.md  LCC15.md
events/dice18/: #DICE18-CFP.txt#  DICE18-CFP.txt  index.md  page.html
events/dice18/abstracts/: ADLY.md
images/: list-style-image.xcf
papers/: AD:STACS:15.md  ADL:DICE:17.md  ADL:ESOP:17.md  ADL:IC:15.md  ADL:ICFP:17.md  ADM:DICE:15.md  ADM:ICFP:15.md  AE:DICE:14.md  AE:WST:10.md  AEM:APLAS:12.md  AEM:RTA:11.md  AEM:TCS:15.md  AEM:WST:12.md  AF:WST:14.md  AM:FLOPS:08.md  AM:FLOPS:10.md  AM:FSCD:16.md  AM:IC:13.md  AM:LMCS:13.md  AM:RTA:09.md  AM:RTA:10.md  AM:RTA:13.md  AM:RTA:13b.md  AM:WST:09.md  AMS:IJCAR:08.md  AMS:TACAS:16.md  AMS:WST:13.md  AS:DICE:17.md  AST:RTA:15.md  Avanzini:CL:07.md  Avanzini:Diss:13.md  Avanzini:ESSLLI:10.md  Avanzini:Master:09.md  FAS:HART:13.md  references.bib  strings.bib
papers/auto/: RTA13.el  flattened.el  references.el
projects/: CRECOGI.md  I608-N18.md  J3563.md  NFW2011.md  P20133.md  P22767.md
projects/J3563/: index.html
software/: 1-tct.md  7-haskell-rewriting-applicative.md  haskell-rewriting.md  hoca.md  icct.md  tct.md
software/hosa/: index.md
software/libraries/: haskell-rewriting-applicative.md  haskell-rewriting.md  qlogic.md
software/tools/: ceta.md  gubs.md  hoca.md  hosa.md  icct.md  tct.md
src/: Bibtex.hs  Main.hs
templates/: bibtex-entry-where.html  bibtex-entry.html  bibtex.bib  cv.html  cv.tex  default.html  document.tex  event.html  project.html  publication.html  publications.html  software-cv.md  software.html
