Name:               homepage
Version:            0.1
Synopsis:           Homepage of Martin Avanzini
Description:        Homepage of Martin Avanzini
Homepage:           http://cl-informatik.uibk.ac.at/users/zini
License:            MIT
License-file:       LICENSE
Author:             Martin Avanzini
Maintainer:         martin.avanzini@uibk.ac.at
Copyright:          (C) 2015 Martin Avanzini
Category:           Web
Build-type:         Simple
Cabal-version:      >= 1.8

Executable homepage
  Main-is:        Main.hs
  Ghc-options:    -Wall -threaded
  Hs-source-dirs: src

  Build-depends:
                  base      >= 4.6  && < 4.9
                , bibtex    >= 0.1  && < 0.2
                , binary    >= 0.5  && < 0.8
                , containers >= 0.5 && < 0.6
                , directory >= 1.2  && < 1.3
                , filepath  >= 1.3  && < 1.5
                , hakyll    >= 4.7  && < 4.8
                , pandoc    >= 1.14 && < 1.15
                , parsec    >=3.1.9 && < 3.2
                , process   >= 1.1  && < 1.3
                , regex-compat >= 0.95 && < 1.0
                , temporary >= 1.2 && < 1.3
                , time >= 1.5 && < 1.6
  Extensions: OverloadedStrings 
                