Name:               homepage
Version:            0.1
Synopsis:           Homepage of Martin Avanzini
Description:        Homepage of Martin Avanzini
Homepage:           http://cl-informatik.uibk.ac.at/users/zini
License:            MIT
License-file:       LICENSE
Author:             Martin Avanzini
Maintainer:         martin.avanzini@uibk.ac.at
Copyright:          (C) 2015 Martin Avanzini
Category:           Web
Build-type:         Simple
Cabal-version:      >= 1.8

Executable homepage
  Main-is:        Main.hs
  Ghc-options:    -Wall -threaded
  Hs-source-dirs: src

  Build-depends:
                  base
                , bibtex
                , binary
                , containers
                , directory
                , filepath
                , hakyll
                , pandoc
                , parsec
                , process
                , regex-compat
                , temporary
                , time
  Extensions: OverloadedStrings 
                